#2669 -- AND MORE... made `#getSuperClass()` return Optional, added `#isJavaLangObject()` and `#isJavaLangObject()` to reduce repetition throughout the codebase, made `#getParent()` return Optional, added TypeSolver#getSolvedJavaLangObject() to return a solved reference to `java.lang.Object` to avoid repetition of this throughout the codebase,
note that this is a suggested commit message from intellij following a rebase.. probably okay, but noted here anyway just in case..